tests/baselines/reference/nodeModulesImportResolutionIntoExport(module=node18).errors.txt
error TS5109: Option 'moduleResolution' must be set to 'Node18' (or left unspecified) when option 'module' is set to 'Node18'.
index.cts(2,23): error TS2792: Cannot find module '#type'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.mts(2,23): error TS2792: Cannot find module '#type'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
index.ts(2,23): error TS2792: Cannot find module '#type'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?


!!! error TS5109: Option 'moduleResolution' must be set to 'Node18' (or left unspecified) when option 'module' is set to 'Node18'.
==== index.ts (1 errors) ====
    // esm format file
    import * as type from "#type";
                          ~~~~~~~
!!! error TS2792: Cannot find module '#type'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    type;
==== index.mts (1 errors) ====
    // esm format file
    import * as type from "#type";
                          ~~~~~~~
!!! error TS2792: Cannot find module '#type'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    type;
==== index.cts (1 errors) ====
    // esm format file
    import * as type from "#type";
                          ~~~~~~~
!!! error TS2792: Cannot find module '#type'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    type;
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module",
        "exports": "./index.cjs",
        "imports": {
            "#type": "package"
        }
    }